--- a/css/style.css
+++ b/css/style.css
@@ -2274,7 +2274,7 @@ button {
 }
 .fa-headset:before {
   content: "\f590";
-  color: #fff;
+  color: #ab98ca;
 }
 .fa-chart-line:before {
   content: "\f201";
